# TimeRelease

./: .gitignore  .pre-commit-config.yaml  README.md  decrypt-secret.py  encrypt-secret.py  encrypt_secret.py  pyproject.toml  requirements.txt  requirements_dev.txt
TimeRelease/: __init__.py  __main__.py  b64utils.py  bench.py  decrypt.py  encrypt.py
tests/: test_encrypt_decrypt.py
