[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TimeRelease"
version = "0.1.0"
requires-python = ">=3.13"
description = "Python utility to cryptographically lock secrets for a preset amount of time."
readme = "README.md"
authors = [
	{ name = "Leo Pagano", email = "leo@leoapagano.com" }
]
maintainers = [
	{ name = "Leo Pagano", email = "leo@leoapagano.com" }
]
license = { file = "LICENSE" }
keywords = [
	"TimeRelease", "Time", "Release", "Crypto", "Cryptography"
]
classifiers = [
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: Implementation :: CPython",
	"License :: OSI Approved :: MIT License",
	"Intended Audience :: Developers",
	"Operating System :: POSIX :: Linux",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: MacOS",
	"Operating System :: MacOS :: MacOS X",
]
dependencies = [
	"mpmath==1.3.0",
	"pycryptodome==3.23.0",
	"sympy==1.14.0",
	"tqdm==4.67.1"
]

[project.optional-dependencies]
dev = [
	"twine",
	"build"
]

[project.urls]
Homepage = "https://github.com/leoapagano/TimeRelease"
Documentation = "https://github.com/leoapagano/TimeRelease/blob/main/README.md"

[project.scripts]
timerelease = "TimeRelease.__main__:main"
