[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TimeRelease"
version = "0.1.0"
requires-python = ">=3.13"
description = "Python utility to cryptographically lock secrets for a preset amount of time."
readme = "README.md"
authors = [
	{ name = "Leo Pagano", email = "leo@leoapagano.com" }
]
maintainers = [
	{ name = "Leo Pagano", email = "leo@leoapagano.com" }
]
license = { file = "LICENSE" }
keywords = [
	"TimeRelease",
	"Time",
	"Release",
	"Encryption",
	"Crypto",
	"Cryptography",
	"Pagano"
]
classifiers = [
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: Implementation :: CPython",
	"License :: OSI Approved :: MIT License",
	"Intended Audience :: Developers",
	"Operating System :: POSIX :: Linux",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: MacOS",
	"Operating System :: MacOS :: MacOS X",
]
dependencies = [
	"mpmath~=1.0",
	"pycryptodome~=3.0",
	"sympy~=1.0",
	"tqdm~=4.0"
]

[project.optional-dependencies]
dev = [
	"build==1.4.0",
	"pre-commit==4.5.1",
	"pytest==9.0.2",
	"ruff==0.15.5",
	"twine==6.2.0"
]

[project.urls]
Homepage = "https://github.com/leoapagano/TimeRelease"
Documentation = "https://github.com/leoapagano/TimeRelease/blob/main/README.md"

[project.scripts]
timerelease = "TimeRelease.__main__:main"

[tool.ruff.format]
indent-style = "tab"
